--- a/roles/init/firewall.yml
+++ b/roles/init/firewall.yml
@@ -1,5 +1,2 @@
 - name: Stop and disable firewalld
-    service:
-      name: firewalld
-      state: stopped
-      enabled: False
+  service: name=firewalld state:stopped enabled=no
