--- a/roles/init/tasks/firewall.yml
+++ b/roles/init/tasks/firewall.yml
@@ -1,2 +1,2 @@
 - name: Stop and disable firewalld
-  service: name=firewalld state:stopped enabled=no
+  service: name=firewalld state=stopped enabled=no
