--- a/roles/wildfly/tasks/wget.yml
+++ b/roles/wildfly/tasks/wget.yml
@@ -14,3 +14,10 @@
     name: wildfly
     shell: /bin/bash
     system: yes
+
+- name: permessi cartella wildfly
+  file:
+    path: /opt/wildfly-11.0.0.Final
+    owner: wildfly
+    group: wildfly
+    recurse: yes
