--- a/roles/master/tasks/main.yml
+++ b/roles/master/tasks/main.yml
@@ -1,3 +1,6 @@
 ---
 - import_tasks: host-master.yml
 - import_tasks: host.yml
+- import_tasks: wildfly.yml
+- import_tasks: wildfly.service.yml
+- import_tasks: init.yml
