--- a/roles/slave/tasks/init.yml
+++ b/roles/slave/tasks/init.yml
@@ -1,5 +1,5 @@
 - name: spostare init-d in /opt/wildfly-11../bin
-  command: mv /opt/wildfly-11.0.0.Final/docs/contrib/scripts/init.d /opt/wildfly-11.0.0.Final/bin
+  command: cp /opt/wildfly-11.0.0.Final/docs/contrib/scripts/init.d /opt/wildfly-11.0.0.Final/bin
 
 - name: Configurazione init.d
   template:
