--- a/roles/master/tasks/main.yml
+++ b/roles/master/tasks/main.yml
@@ -4,4 +4,5 @@
 - import_tasks: wildfly.conf.yml
 - import_tasks: wildfly.service.yml
 - import_tasks: init.yml
+- import_tasks: add.user.yml
 - import_tasks: start-wildfly.yml
