--- a/roles/master/tasks/add-user.yml
+++ b/roles/master/tasks/add-user.yml
@@ -9,7 +9,7 @@
 #./add-user.sh utente admin
 - name: Avvio add-user.sh per utente admin
   command: /opt/wildfly-11.0.0.Final/bin/add-user.sh -u {{ ACCOUNT }} -p {{ PASSWORD }} -r ManagementRealm
-./add-user.sh
+#./add-user.sh
 - name: Avvio add-user.sh per utente normale
   command: /opt/wildfly-11.0.0.Final/bin/secret.sh
   register: wildfly_secret
