--- a/roles/slave/tasks/host-slave.yml
+++ b/roles/slave/tasks/host-slave.yml
@@ -9,4 +9,4 @@
     regexp: "IPMASTER"
     replace: "{{hostvars[item]['ansible_default_ipv4']['address']}}"
   with_items:
-    - "{{ groups['slave'] }}"
+    - "{{ groups['master'] }}"
