--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
 - hosts: master
   become: true
   roles:
+    - oracle-java
     - init
     - wildfly
     - master
@@ -10,6 +11,7 @@
 - hosts: slave
   become: true
   roles:
+    - oracle-java
     - init
     - wildfly
     - slave
